in process language

--- a/src/app/main/contract/form-contract/party-contract-form/party-contract-form.component.html
+++ b/src/app/main/contract/form-contract/party-contract-form/party-contract-form.component.html
@@ -131,7 +131,7 @@
                     <img src="assets/img/login_email.svg" class="input-img" />
                     <input
                       type="text"
-                      placeholder="{{ 'vui_long_nhap_sdt' | translate }}"
+                      placeholder="{{ 'nhap_sdt' | translate }}"
                       [(ngModel)]="d.email"
                     />
                   </div>
@@ -301,7 +301,7 @@
                     <img src="assets/img/login_email.svg" class="input-img" />
                     <input
                       type="text"
-                      placeholder="{{ 'vui_long_nhap_sdt| translate }}"
+                      placeholder="{{ 'nhap_sdt' | translate }}"
                       [(ngModel)]="d.email"
                     />
                   </div>
@@ -340,7 +340,7 @@
                   <div class="input-data">
                     <input
                       type="text"
-                      placeholder="{{ 'Nhập CMT/CCCD' | translate }}"
+                      placeholder="{{ 'enter.cardId' | translate }}"
                       [(ngModel)]="d.card_id"
                       oninput="this.value = this.value.replace(/[\s]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');"
                     />
@@ -497,28 +497,14 @@
                     />
                   </div>
                 </div>
-
-                <!-- <div *ngIf="d.login_by === 'phone'" class="participants__name" style="width: 90%">
-                  <div class="label_detail text-color">
-                    Số điện thoại&nbsp;<span class="required-title">*</span>
-                  </div>
-                  <div class="input-data">
-                    <img src="assets/img/login_email.svg" class="input-img" />
-                    <input
-                      type="text"
-                      placeholder="{{ 'Nhập số điện thoại' | translate }}"
-                      [(ngModel)]="d.email"
-                    />
-                  </div>
-                </div> -->
               </div>
 
                <!--trường hiển thị khi văn thư tổ chức của tôi chọn loại ký là usb token-->
                <div class="participants--input" style="display: flex" *ngIf="getDataSignUSBToken(d).length > 0">
                 <div class="participants__name" style="width: 90%">
-                  <div class="label_detail text-color">Mã số thuế/CMT/CCCD&nbsp;<span class="required-title">*</span><div style="color: #ffc107;">({{'Thông tin trong USB token' | translate}})</div></div>
+                  <div class="label_detail text-color">{{'tax_code.cardId' | translate}}&nbsp;<span class="required-title">*</span><div style="color: #ffc107;">({{'Thông tin trong USB token' | translate}})</div></div>
                   <div class="input-data">
-                    <input type="text" placeholder="{{'Nhập mã số thuế/CMT/CCCD' | translate}}" [(ngModel)]="d.card_id" oninput="this.value = this.value.replace(/[\s]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');">
+                    <input type="text" placeholder="{{'enter.tax_code.cardId' | translate}}" [(ngModel)]="d.card_id" oninput="this.value = this.value.replace(/[\s]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');">
                   </div>
                 </div>
               </div>
@@ -668,7 +654,7 @@
                       >&nbsp;-&nbsp;
                       <div style="color: #ffc107">
                         ({{
-                          "Chỉ được trùng với email trong cùng tổ chức"
+                          'only.match.email.org'
                             | translate
                         }})
                       </div>
@@ -735,7 +721,7 @@
                         <input (change)="changeTypeSign(d)" type="radio" name="checkPhoneMailPartReview_{{index}}" [value]="email" [(ngModel)]="d.login_by"/>
                       </div>&nbsp;
                       <div>
-                        {{'Đăng nhập bằng email' | translate}}
+                        {{'typeOfSignEmail' | translate}}
                       </div>
                     </div>
                   </div>
@@ -745,7 +731,7 @@
                         <input (change)="changeTypeSign(d)" type="radio" name="checkPhoneMailPartReview_{{index}}" [(ngModel)]="d.login_by" [value]="phone"/>
                       </div>&nbsp;
                       <div>
-                        {{'Đăng nhập bằng số điện thoại' | translate}}
+                        {{'typeOfSignPhone' | translate}}
                       </div>
                     </div>
                   </div>
@@ -787,7 +773,7 @@
                     </div>
   
                     <div *ngIf="d.login_by === 'phone'" class="label_detail text-color">
-                      Số điện thoại&nbsp;<span class="required-title">*</span>
+                      {{'user.phone' | translate}}&nbsp;<span class="required-title">*</span>
                     </div>
   
                     <div *ngIf="d.login_by === 'email'" class="input-data">
@@ -803,7 +789,7 @@
                       <img src="assets/img/login_email.svg" class="input-img" />
                       <input
                         type="text"
-                        placeholder="{{ 'Nhập số điện thoại' | translate }}"
+                        placeholder="{{ 'nhap_sdt' | translate }}"
                         [(ngModel)]="d.email"
                       />
                     </div>
@@ -863,7 +849,7 @@
                       <input (change)="changeTypeSign(d)" type="radio" name="checkPhoneMailPartSign_{{index}}" [value]="email" [(ngModel)]="email"/>
                     </div>&nbsp;
                     <div>
-                      {{'Đăng nhập bằng email' | translate}}
+                      {{'typeOfSignEmail' | translate}}
                     </div>
                   </div>
                 </div>
@@ -873,7 +859,7 @@
                       <input (change)="changeTypeSign(d)" type="radio" name="checkPhoneMailPartSign_{{index}}" [(ngModel)]="d.login_by" [value]="phone"/>
                     </div>&nbsp;
                     <div>
-                      {{'Đăng nhập bằng số điện thoại' | translate}}
+                      {{'typeOfSignPhone' | translate}}
                     </div>
                   </div>
                 </div>
@@ -964,13 +950,13 @@
 
                   <div *ngIf="d.login_by === 'phone'" class="participants__name" style="width: 90%">
                     <div class="label_detail text-color">
-                      Số điện thoại&nbsp;<span class="required-title">*</span>
+                      {{'user.phone' | translate}}&nbsp;<span class="required-title">*</span>
                     </div>
                     <div class="input-data">
                       <img src="assets/img/login_email.svg" class="input-img" />
                       <input
                         type="text"
-                        placeholder="{{ 'Nhập số điện thoại' | translate }}"
+                        placeholder="{{ 'nhap_sdt' | translate }}"
                         [(ngModel)]="d.email"
                       />
                     </div>
@@ -984,12 +970,12 @@
                 >
                   <div class="participants__name" style="width: 90%">
                     <div class="label_detail text-color">
-                      CMT/CCCD&nbsp;<span class="required-title">*</span>
+                      {{'cardId' | translate}}&nbsp;<span class="required-title">*</span>
                     </div>
                     <div class="input-data">
                       <input
                         type="text"
-                        placeholder="{{ 'Nhập CMT/CCCD' | translate }}"
+                        placeholder="{{ 'enter.cardId' | translate }}"
                         [(ngModel)]="d.card_id"
                         oninput="this.value = this.value.replace(/[\s]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');"
                       />
@@ -1000,9 +986,9 @@
                   <!--Check ký usb token cho đối tác, nếu có thì render trường mã số thuế/cccd-->
                   <div class="participants--input" style="display: flex" *ngIf="getDataSignUSBToken(d).length > 0">
                     <div class="participants__name" style="width: 90%">
-                      <div class="label_detail text-color">Mã số thuế/CMT/CCCD&nbsp;<span class="required-title">*</span><div style="color: #ffc107;">({{'Thông tin trong USB token' | translate}})</div></div>
+                      <div class="label_detail text-color">{{'tax_code.cardId' | translate}}&nbsp;<span class="required-title">*</span><div style="color: #ffc107;">({{'info.token' | translate}})</div></div>
                       <div class="input-data">
-                        <input type="text" placeholder="{{'Nhập mã số thuế/CMT/CCCD' | translate}}" [(ngModel)]="d.card_id" oninput="this.value = this.value.replace(/[\s]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');">
+                        <input type="text" placeholder="{{'enter.tax_code.cardId' | translate}}" [(ngModel)]="d.card_id" oninput="this.value = this.value.replace(/[\s]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');">
                       </div>
                     </div>
                   </div>
@@ -1010,9 +996,9 @@
                   <!--trường hiển thị khi người ký của đối tác chọn loại ký là hsm-->
                   <div class="participants--input" style="display: flex" *ngIf="getDataSignHsm(d).length > 0">
                     <div class="participants__name" style="width: 90%">
-                      <div class="label_detail text-color">Mã số thuế&nbsp;<span class="required-title">*</span></div>
+                      <div class="label_detail text-color">{{'tax_code' | translate}}&nbsp;<span class="required-title">*</span></div>
                       <div class="input-data">
-                        <input type="text" placeholder="{{'Nhập mã số thuế' | translate}}" [(ngModel)]="d.card_id" oninput="this.value = this.value.replace(/[\s]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');">
+                        <input type="text" placeholder="{{'enter.tax.code' | translate}}" [(ngModel)]="d.card_id" oninput="this.value = this.value.replace(/[\s]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');">
                       </div>
                     </div>
                   </div>
@@ -1171,20 +1157,6 @@
                       />
                     </div>
                   </div>
-
-                  <!-- <div *ngIf="d.login_by === 'phone'" class="participants__name" style="width:90%">
-                    <div class="label_detail text-color">
-                      Số điện thoại&nbsp;<span class="required-title">*</span>
-                    </div>
-                    <div class="input-data">
-                      <img src="assets/img/login_email.svg" class="input-img" />
-                      <input
-                        type="text"
-                        placeholder="{{ 'Nhập số điện thoại' | translate }}"
-                        [(ngModel)]="d.email"
-                      />
-                    </div>
-                  </div> -->
                 </div>
 
                 <div
@@ -1194,12 +1166,12 @@
                 >
                   <div class="participants__name" style="width: 90%">
                     <div class="label_detail text-color">
-                      CMT/CCCD&nbsp;<span class="required-title">*</span>
+                      {{'cardId' | translate}}&nbsp;<span class="required-title">*</span>
                     </div>
                     <div class="input-data">
                       <input
                         type="text"
-                        placeholder="{{ 'Nhập CMT/CCCD' | translate }}"
+                        placeholder="{{ 'enter.cardId' | translate }}"
                         [(ngModel)]="d.card_id"
                         oninput="this.value = this.value.replace(/[\s]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');"
                       />
@@ -1210,9 +1182,9 @@
                  <!--trường hiển thị khi văn thư đối tác của tổ chức chọn loại ký là usb token-->
                  <div class="participants--input" style="display: flex" *ngIf="getDataSignUSBToken(d).length > 0">
                   <div class="participants__name" style="width: 90%">
-                    <div class="label_detail text-color">Mã số thuế/CMT/CCCD&nbsp;<span class="required-title">*</span><div style="color: #ffc107;">({{'Thông tin trong USB token' | translate}})</div></div>
+                    <div class="label_detail text-color">{{'tax_code.cardId' | translate}}&nbsp;<span class="required-title">*</span><div style="color: #ffc107;">({{'info.token' | translate}})</div></div>
                     <div class="input-data">
-                      <input type="text" placeholder="{{'Nhập mã số thuế/CMT/CCCD' | translate}}" [(ngModel)]="d.card_id" oninput="this.value = this.value.replace(/[\s]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');">
+                      <input type="text" placeholder="{{'enter.tax_code.cardId' | translate}}" [(ngModel)]="d.card_id" oninput="this.value = this.value.replace(/[\s]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');">
                     </div>
                   </div>
                 </div>
@@ -1273,7 +1245,7 @@
                         <input (change)="changeTypeSign(d)" type="radio" name="checkPhoneMailPerson_{{index}}" [value]="email" [(ngModel)]="d.login_by"/>
                       </div>&nbsp;
                       <div>
-                        {{'Đăng nhập bằng email' | translate}}
+                        {{'typeOfSignEmail' | translate}}
                       </div>
                     </div>
                   </div>
@@ -1283,7 +1255,7 @@
                         <input (change)="changeTypeSign(d)" type="radio" name="checkPhoneMailPerson_{{index}}" [(ngModel)]="d.login_by" [value]="phone"/>
                       </div>&nbsp;
                       <div>
-                        {{'Đăng nhập bằng số điện thoại' | translate}}
+                        {{'typeOfSignPhone' | translate}}
                       </div>
                     </div>
                   </div>
@@ -1375,13 +1347,13 @@
 
                   <div *ngIf="d.login_by === 'phone'" class="participants__name" style="width: 90%">
                     <div class="label_detail text-color">
-                      Số điện thoại&nbsp;<span class="required-title">*</span>
+                      {{'user.phone' | translate}}&nbsp;<span class="required-title">*</span>
                     </div>
                     <div class="input-data">
                       <img src="assets/img/login_email.svg" class="input-img" />
                       <input
                         type="text"
-                        placeholder="{{ 'Nhập số điện thoại' | translate }}"
+                        placeholder="{{ 'nhap_sdt' | translate }}"
                         [(ngModel)]="d.email"
                       />
                     </div>
@@ -1391,7 +1363,7 @@
                 <div class="participants--input">
                 <div *ngIf="getDataSignCka(d).length > 0" class="participants__name" style="width: 90%">
                   <div class="label_detail text-color">
-                    Số điện thoại&nbsp;<span
+                    {{'user.phone' | translate}}&nbsp;<span
                       *ngIf="getDataSignCka(d).length > 0"
                       class="required-title"
                       >*</span
@@ -1400,7 +1372,7 @@
                   <div class="input-data">
                     <input
                       type="text"
-                      placeholder="{{ 'Nhập số điện thoại' | translate }}"
+                      placeholder="{{ 'nhap_sdt' | translate }}"
                       [(ngModel)]="d.phone"
                       oninput="this.value = this.value.replace(/[\s]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');"
                     />
@@ -1415,12 +1387,12 @@
                 >
                   <div class="participants__name" style="width: 90%">
                     <div class="label_detail text-color">
-                      CMT/CCCD&nbsp;<span class="required-title">*</span>
+                      {{'cardId' | translate}}&nbsp;<span class="required-title">*</span>
                     </div>
                     <div class="input-data">
                       <input
                         type="text"
-                        placeholder="{{ 'Nhập CMT/CCCD' | translate }}"
+                        placeholder="{{ 'enter.cardId' | translate }}"
                         [(ngModel)]="d.card_id"
                         oninput="this.value = this.value.replace(/[\s]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');"
                       />
@@ -1431,18 +1403,18 @@
                   <!--Check ký usb token cho cá nhân, nếu có thì render trường mã số thuế/cccd-->
                   <div class="participants--input" style="display: flex" *ngIf="getDataSignUSBToken(d).length > 0">
                     <div class="participants__name" style="width: 90%">
-                      <div class="label_detail text-color">Mã số thuế/CMT/CCCD&nbsp;<span class="required-title">*</span><div style="color: #ffc107;">({{'Thông tin trong USB token' | translate}})</div></div>
+                      <div class="label_detail text-color">{{'tax_code.cardId' | translate}}&nbsp;<span class="required-title">*</span><div style="color: #ffc107;">({{'info.token' | translate}})</div></div>
                       <div class="input-data">
-                        <input type="text" placeholder="{{'Nhập mã số thuế/CMT/CCCD' | translate}}" [(ngModel)]="d.card_id" oninput="this.value = this.value.replace(/[\s]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');">
+                        <input type="text" placeholder="{{'enter.tax_code.cardId' | translate}}" [(ngModel)]="d.card_id" oninput="this.value = this.value.replace(/[\s]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');">
                       </div>
                     </div>
                   </div>
 
                   <div class="participants--input" style="display: flex" *ngIf="getDataSignHsm(d).length > 0">
                     <div class="participants__name" style="width: 90%">
-                      <div class="label_detail text-color">Mã số thuế&nbsp;<span class="required-title">*</span></div>
+                      <div class="label_detail text-color">{{'tax_code' | translatenbsp;<span class="required-title">*</span></div>
                       <div class="input-data">
-                        <input type="text" placeholder="{{'Nhập mã số thuế' | translate}}" [(ngModel)]="d.card_id" oninput="this.value = this.value.replace(/[\s]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');">
+                        <input type="text" placeholder="{{'enter.tax.code' | translate}}" [(ngModel)]="d.card_id" oninput="this.value = this.value.replace(/[\s]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');">
                       </div>
                     </div>
                   </div>
@@ -1539,5 +1511,5 @@
   color="#fff"
   type="ball-spin-clockwise"
 >
-  <p style="font-size: 18px; color: white">Đang xử lý...</p>
+  <p style="font-size: 18px; color: white">{{'sys.processing' | translate}}...</p>
 </ngx-spinner>
