--- a/src/app/main/contract/form-contract/infor-contract-form/infor-contract-form.component.html
+++ b/src/app/main/contract/form-contract/infor-contract-form/infor-contract-form.component.html
@@ -43,7 +43,7 @@
     <div class="form-group">
       <div class="label_item">{{'note' | translate}} </div>
       <div class="input-group">
-        <textarea name="" placeholder="Nhập lời nhắn"
+        <textarea name="" placeholder="{{'enter.note' | translate}}"
           style="width: 100%; height: 117px;border: 1px solid #2196F3; border-radius: 5px; padding-left: 11px;outline: none;" [(ngModel)]="datasForm.notes"
           id="" cols="30" rows="10"></textarea>
       </div>
